--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,4 +1,4 @@
-% Created 2022-05-08 Sun 12:51
+% Created 2022-05-20 Fri 13:07
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -20,7 +20,7 @@
  pdftitle={Zusammenfassung},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.1 (Org mode 9.6)}, 
+ pdfcreator={Emacs 27.2 (Org mode 9.6)}, 
  pdflang={English}}
 \begin{document}
 
@@ -29,12 +29,12 @@
 
 
 \section{Diskrete Wahrscheinlichkeitsräume}
-\label{sec:org979dd88}
+\label{sec:orgd28ce7b}
 \subsection{Grundlagen}
-\label{sec:orgd711c3c}
+\label{sec:org0d0ba14}
 
 \subsubsection{Definition 1}
-\label{sec:org86e8007}
+\label{sec:org7c08d7c}
 \begin{itemize}
 \item Ein diskreter Wahrscheinlichkeitsraum ist durch eine \textbf{Ergebnismenge} \(\Omega = \{\omega_1,...,\omega_n\}\) von Elementarereignissen gegeben
 \item Jedem Ereignis \$\(\omega\)\textsubscript{i4} ist eine Wahrscheinlichkeit \(0 \leq Pr[\omega_i] \leq 1\) zugeordnet \\
@@ -47,7 +47,7 @@
 Man kann standard Mengenoperationen auf Ereignisse machen, also bei Ereignissen \(A,B\) dann auch \(A \cup B\), \(A \cap B\)
 
 \subsubsection{Lemma 8}
-\label{sec:org54435dd}
+\label{sec:orgeea8f96}
 Für Ereignisse \(A,B, A_1, A_2,...,A_n\) gilt
 \begin{itemize}
 \item \(Pr[\emptyset] = 0, Pr[\Omega] = 1\)
@@ -63,20 +63,20 @@ Und für unendliche Menge von \textbf{disjunkten} Ereignissen:\\
 \end{itemize}
 
 \subsubsection{Satz 9 Siebformel}
-\label{sec:orgc15474b}
+\label{sec:org45bee49}
 Lemma 8, gilt nur für \textbf{disjunkte} Mengen. Das geht auch für nicht disjunkte!
 \begin{enumerate}
 \item Zwei Mengen
-\label{sec:org84a20dc}
+\label{sec:org2874b1e}
 \(Pr[A \cup B] = Pr[A] + Pr[B] - Pr[A \cap B]\)
 \item Drei Mengen
-\label{sec:org32ab2b1}
+\label{sec:orgef3bd69}
 \(Pr[A_1 \cup A_2 \cup A_3] =\) \\
 \(Pr[A1] + Pr[A2] + Pr[A3]\) \\
 \(- Pr[A1 \cap A2] - Pr[A1 \cap A3] - Pr[A_2 \cap A_3\) \\
 \(+ Pr[A_1 \cap A_2 \cap A_3]\)
 \item n Mengen
-\label{sec:org0d3a096}
+\label{sec:orgb3f46ed}
 Veranschaulichen an Venn-Diagramm
 \begin{enumerate}
 \item Alle aufaddieren
@@ -88,14 +88,14 @@ Veranschaulichen an Venn-Diagramm
 \end{enumerate}
 
 \subsubsection{Wahl der Wahrscheinlichkeiten}
-\label{sec:orga526239}
+\label{sec:org8e6a348}
 Prinzip von Laplace (Pierre Simon Laplace (1749–1827)): Wenn nichts dagegen spricht, gehen wir davon aus, dass alle Elementarereignisse gleich wahrscheinlich sind.
 \(Pr[E] = \frac{|E|}{|\Omega|}\)
 
 \subsection{Bedingte Wahrscheinlichkeiten}
-\label{sec:org0ebc9f6}
+\label{sec:orgca8296a}
 \subsubsection{Definition 12}
-\label{sec:orgbce5e67}
+\label{sec:org7766847}
 \(A\) und \(B\) seien Ereignisse mit \(Pr[B] > 0\). Die bedingte Wahrscheinlichkeit \(Pr[A|B]\) von A gegeben B ist definiert als:
 \(Pr[A|B] := \frac{Pr[A \cap B]}{Pr[B]}\)
 
@@ -105,24 +105,24 @@ Die bedingten Wahrscheinlichkeiten \(Pr[·|B]\) bilden für ein beliebiges Ereig
 
 
 \subsubsection{Baba Beispiele}
-\label{sec:org6ff1b43}
+\label{sec:org5ec0b1c}
 \begin{enumerate}
 \item {\bfseries\sffamily TODO} Töchterproblem
-\label{sec:org393affb}
+\label{sec:orgaf15713}
 \item {\bfseries\sffamily TODO} Ziegenproblem
-\label{sec:org170ca70}
+\label{sec:orga4ce012}
 \item {\bfseries\sffamily TODO} Geburtstagsproblem
-\label{sec:orgd03dcad}
+\label{sec:orgb8ce988}
 \end{enumerate}
 
 \subsubsection{Satz 18 (Satz von der totalen Wahrscheinlichkeit)}
-\label{sec:orgeb98ea8}
+\label{sec:org6c067f7}
 Die Ereignisse \(A_1, ..., An\) seien paarweise disjunkt und es gelte \(B \subseteq A1 \cup ... \cup An\). \\
 \(Pr[B] = \sum_{i=1}^n Pr[B|A_i] * Pr[A_i]\) \\
 analog für \(n \rightarrow \infty\)
 
 \subsubsection{Satz 19 (Satz von Bayes)}
-\label{sec:orgaec011d}
+\label{sec:orgd824167}
 Es seien \(A_1, ..., A_n\) paarweise disjunkt, mit \(Pr[A_j] > 0\) für alle j.
 Außerdem sei \(B \subseteq A_1 \cup ... \cup A_n\) ein Ereignis mit \(Pr[B]>0\).
 Dann gilt für beliebiges \(i \in [n]\)
@@ -130,17 +130,37 @@ Dann gilt für beliebiges \(i \in [n]\)
 \(Pr[A_i|B] = \frac{Pr[A_i \cap B]}{Pr[B]} = \frac{Pr[B|A_i] * Pr[A_i]}{\sum_{j=1}^n Pr[B|A_j] * Pr[A_j]}\)
 
 \section{Unabhängigkeit}
-\label{sec:orgb98d953}
+\label{sec:org400f9a2}
 Wenn das auftreten von Ereignissen unabhängig ist.
 \(Pr[A \cup B] = Pr[A] * Pr[B]\)
 
 \section{Zufallsvariablen}
-\label{sec:org153754c}
+\label{sec:org7e84515}
 
 \subsection{Grundlagen}
-\label{sec:orgad9b5cf}
+\label{sec:org36850a2}
 Anstatt der Ereignisse selbst sind wir oft an ”Auswirkungen“ oder ”Merkmalen“ der (Elementarereignisse) interessiert
 
 Sei ein Wahrscheinlichkeitsraum auf der Ergebnismenge Ω gegeben. Eine Abbildung \(X : \Omega \rightarrow R\) heißt (numerische) Zufallsvariable.
 Eine Zufallsvariable X über einer endlichen oder abzählbar unendlichen Ergebnismenge heißt \textbf{diskret}
+
+
+\subsection{Erwartungswert und Varianz}
+\label{sec:org3e55033}
+\subsubsection{Definition 29}
+\label{sec:org19b8be7}
+Zu einer Zufalls variablen \emph{X} definieren wir den \textbf{Erwartungswert} \(E[X]\) durch
+\(E[X] := \sum_{x\in W_X} x \ast Pr[X = x] ] \sum x \ast f_X(x)\),    wo \(f_X(x)\) die Dichte ist
+sofern \(\sum_{x\in W_X} |x| \ast Pr[X = x]\) konvergiert
+
+\(E[X] = /siehe\ oben/ = \sum_{x\in W_X} x\sum_{\omega \in \Omega :X(\omega)=\omega} Pr[w]\)
+       \(= \sum_{\omega \in \Omega} X(\omega)  \ast Pr[\omega]\)
+\subsubsection{Satz 33 Linearität des Erwartungswert}
+\label{sec:org066c950}
+\(E[a\ast X\ast b] = a \ast E[x]\ast b,     \quad a, b\in \mathbb{R}\)
+
+\subsubsection{Definition 35 Erwartungswert bei bedingter Wahrscheinlichkeit}
+\label{sec:org65293a6}
+Sei \emph{X} eine Zufallsvariable \& A ein Ereignis.
+\(f_{X|A}(x) := Pr[X = x|A] = \frac{Pr["X=x" \cap \:A]}{Pr[A]}\)
 \end{document}
