--- a/zusammenfassung.org
+++ b/zusammenfassung.org
@@ -167,7 +167,7 @@ Analog: Gesamte Verteilung ist Produkt aus einzelnen Verteilungen.
 *** Zusammengesetzte Zufallsvariablen
 **** Satz 49
 Für zwei unabhängige Zufallsvariablen X und Y sei Z := X + Y . Es gilt
-$f_Z(z) = \sum_{x \in W_X} f_X(x) * f_Y(z − x)$
+$f_Z(z) = \sum_{x \in W_X} f_X(x) * f_Y(z - x)$
 
 *** Momente zusammengesetzter Zufallsvariablen
 **** Satz 50 (Linearität des Erwartungswerts)
@@ -182,3 +182,52 @@ $E[X1*...*Xn] = E[X1]*...*E[Xn]$
 Zu einem Ereignis A heißt die Zufallsvariable \\
 $I_A = \begin{array}{ll}  1 & \, \textrm{falls A eintritt} \\ 0 & \, \textrm{sonst} \\\end{array}$ \\
 *Indikatorvariable* des Ereigniss A
+
+* Wichtige diskrete Verteilungen
+
+** Bernoulli Verteilung
+Eine Zufallsvariable X mit $W_X = {0, 1}$ und der Dichte
+$f_X(x) = \left\{ \begin{array}{ll} p & x = 1 \\ 1-p & x = 0 \\ \end{array} \right$
+
+heißt Bernoulli-verteilt. Den Parameter p nennen wir Erfolgswahrscheinlichkeit.
+Eine solche Verteilung erhält man z.B. bei einer einzelnen Indikatorvariablen. Es gilt mir $q := p-1$
+$E[X] = p$ und $Var[X] = pq$,
+wegen $E[X^2] = p$ und $Var[X] = E[X^2] − E[X]^2 = p − p^2$.
+** Binomialverteilung
+Eine Bernoulli-verteilte Zufallsvariable entspricht der Verteilung einer Indikatorvariablen. Häufig betrachtet man jedoch Summen von Indikatorvariablen.
+*** Definition 55
+Sei $X := X_1 + ... + X_n$ als Summe von n unabhängigen, Bernoulli-verteilten Zufallsvariablen mit gleicher Erfolgswahrscheinlichkeit p definiert. Dann heißt X binomialverteilt mit den Parametern n und p. In Zeichen schreiben wir
+$X \sim Bin(n,p)$
+*** Satz 56
+Wenn $X \sim Bin(n_x, p)$ und $Y \sim Bin(n_y, p)$ unabhängig sind, dann gilt für $Z := X + Y$ , dass $Z \sim Bin(n_x + n_y, p)$.
+** 5.3 Geometrische Verteilung
+Man betrachte ein Experiment, das so lange wiederholt wird, bis Erfolg eintritt. Gelingt ein einzelner Versuch mit Wahrscheinlichkeit p, so ist die Anzahl der Versuche bis zum Erfolg geometrisch verteilt.
+*** Definition 57
+Eine geometrisch verteilte Zufallsvariable X mit Parameter (Erfolgswahrscheinlichkeit)
+$p \in (0, 1]$ und $q := 1 - p$ hat die Dichte
+$f_X(i) = pq^{i-1}$ für $i \in \mathbb{N}$ .
+Für Erwartungswert und Varianz geometrisch verteilter Zufallsvariablen gilt: \\
+$E[X] = \frac{1}{p}$ und $Var[X] = \frac{q}{p^2}$
+*** Warten auf n-ten Erfolg
+$f_Z(z) = \begin{pmatrix} z - 1 \\ n - 1 \end{pmatrix} * p^n(1-p) (1-p)^{z-n}$
+** 5.4 Poisson-Verteilung
+Die Poisson-Verteilung kann verwendet werden, um die Anzahl von Ereignissen zu
+modellieren, welche mit konstanter Rate und unabhängig voneinander in einem
+Zeitintervall auftreten.
+Eine Poisson-verteilte Zufallsvariable X mit dem Parameter $\lambda \geq 0$ hat den
+Wertebereich $W_X = \mathbb{N}_0$ und besitzt die Dichte
+$f_X(i) = \frac{e^{-\lambda}\lambda^i}{i!}$ für $i \in \mathbb{N}_0$. \\
+Als Erwartungswert ergibt sich: \\
+$\mathbb{E}[X] = \lambda$ \\
+Und für die Varianz: \\
+$Var[X] = \lambda$
+*** 5.4.1 Poisson-Verteilung als Grenzwert der Binomialverteilung
+Wir betrachten eine Folge von binomialverteilten Zufallsvariablen $X_n$ mit
+$X_n \sim Bin(n, p_n)$, wobei $p_n = \lambda/n$. Für ein beliebiges k mit $0 \leq k \leq n$ ist die Wahrscheinlichkeit, dass $X_n$ den Wert k annimmt gleich: \\
+$b(k;n,p_n) = \frac{\lambda^k}{k!} * \frac{n^{\underline{k}}}{n^k} (1-\frac{\lambda}{n})^{n-k}$ \\
+Damit folgt: \\
+$\lim_{n \rightarrow \infty} b(k;n,p_n) = e^{-\lambda} * \frac{\lambda^k}{k!}$
+
+*** Satz 59
+Sind X und Y unabhängige Zufallsvariablen mit $X \sim Po(\lambda)$ und $Y \sim Po(\mu)$, dann gilt \\
+$Z := X + Y  \sim Po(\lambda + \mu)$
