--- a/zusammenfassung.org
+++ b/zusammenfassung.org
@@ -231,3 +231,29 @@ $\lim_{n \rightarrow \infty} b(k;n,p_n) = e^{-\lambda} * \frac{\lambda^k}{k!}$
 *** Satz 59
 Sind X und Y unabhängige Zufallsvariablen mit $X \sim Po(\lambda)$ und $Y \sim Po(\mu)$, dann gilt \\
 $Z := X + Y  \sim Po(\lambda + \mu)$
+
+* Abschätzen von Wahrscheinlichkeiten
+** Markov & Chebyshev Ungleichungen
+** Satz 60: Markov-Ungleichung
+Sei /X/ eine Zufallsvariable die nur nicht negative Werte annimmt. Dann gilt für alle $t\in \mathbb{R}$ mit $t > 0$, dass
+#+BEGIN_CENTER
+$Pr[X>t] \le \frac{\mathbb{E}[X]}{t}$
+#+END_CENTER
+Äquivalent dazu: $Pr[X>t \bullet \mathbb{E}[X]] \le 1/t$
+
+** Satz 61: Chebyshev-Ungleichung
+Sei /X/ eine Zufallsvariable, und sei $t\in \mathbb{R}$ mit $t>0$. Dann gilt
+#+BEGIN_CENTER
+$Pr[|X-\mathbb{E}[X]| \ge t] \le \frac{Var[X]}{t^2}$
+#+END_CENTER
+Äquivalent dazu: $Pr[|X-\mathbb{E}[X]|\ge t\sqrt{Var[X]}] \le 1/t^2$
+
+** Satz 62: Gesetz der großen Zahlen
+Gegeben sei eine Zufallsvariable /X/ & seien $\epsilon, \delta > 0$  beliebig aber fest. Dann gilt für alle $n\ge \frac{Var[X]}{\epsilon \delta^2}$ \\
+Sind $X_1, ..., X_n$ unabhängige Zufallsvariablen mit derselben Verteilung wie /X/ und setzt man $Z:= \frac{X_1 + ... + X_n}{n}$ \\
+so gilt $Pr[|Z-\mathbb{E}[X]| \ge \delta] \le \epsilon$
+
+*** Wahrscheinlichkeit und relative Häufigkeit
+*TODO*: /slide 161/
+
+** Chernoff-Schranken
